--- a/Rohan_Shrestha_CV.yaml
+++ b/Rohan_Shrestha_CV.yaml
@@ -1,131 +1,89 @@
 cv:
   name: Rohan Shrestha
-  location: Location
-  email: john.doe@example.com
-  phone: +1-609-999-9995
-  website:
+  location: Lalitpur, Nepal
+  email: iamrohanshrestha@gmail.com
+  phone: +977-9843915915
+  website: https://rohan-shrestha.com.np
   social_networks:
     - network: LinkedIn
-      username: john.doe
+      username: shrestharohan
     - network: GitHub
-      username: john.doe
+      username: iamrohanshrestha
   sections:
-    welcome_to_RenderCV!:
-      - '[RenderCV](https://rendercv.com) is a Typst-based CV framework designed for academics and engineers, with Markdown syntax support.'
-      - Each section title is arbitrary. Each section contains a list of entries, and there are 7 different entry types to choose from.
     education:
-      - institution: Stanford University
-        area: Computer Science
-        degree: PhD
-        date:
-        start_date: 2023-09
-        end_date: present
-        location: Stanford, CA, USA
-        summary:
-        highlights:
-          - Working on the optimization of autonomous vehicles in urban environments
-      - institution: Boğaziçi University
-        area: Computer Engineering
+      - institution: Tribhuvan University
+        area: Computer Science and Information Technology
         degree: BS
-        date:
-        start_date: 2018-09
-        end_date: 2022-06
-        location: Istanbul, Türkiye
+        start_date: 2021-03
+        end_date: 2025-06
+        location: Kathmandu, Nepal
         summary:
         highlights:
-          - 'GPA: 3.9/4.0, ranked 1st out of 100 students'
-          - 'Awards: Best Senior Project, High Honor'
     experience:
-      - company: Company C
-        position: Summer Intern
-        date:
-        start_date: 2024-06
-        end_date: 2024-09
-        location: Livingston, LA, USA
-        summary:
-        highlights:
-          - Developed deep learning models for the detection of gravitational waves in LIGO data
-          - Published [3 peer-reviewed research papers](https://example.com) about the project and results
-      - company: Company B
-        position: Summer Intern
-        date:
-        start_date: 2023-06
-        end_date: 2023-09
-        location: Ankara, Türkiye
-        summary:
-        highlights:
-          - Optimized the production line by 15% by implementing a new scheduling algorithm
-      - company: Company A
-        position: Summer Intern
-        date:
-        start_date: 2022-06
-        end_date: 2022-09
-        location: Istanbul, Türkiye
-        summary:
-        highlights:
-          - Designed an inventory management web application for a warehouse
-    projects:
-      - name: '[Example Project](https://example.com)'
-        date:
-        start_date: 2024-05
+      - company: Slash Plus
+        position: Frontend Developer
+        start_date: 2024-07
         end_date: present
-        location:
-        summary: A web application for writing essays
-        highlights:
-          - Launched an [iOS app](https://example.com) in 09/2024 that currently has 10k+ monthly active users
-          - The app is made open-source (3,000+ stars [on GitHub](https://github.com))
-      - name: '[Teaching on Udemy](https://example.com)'
-        date: Fall 2023
-        start_date:
-        end_date:
-        location:
+        location: Kathmandu, Nepal
         summary:
         highlights:
-          - Instructed the "Statics" course on Udemy (60,000+ students, 200,000+ hours watched)
+      - company: Inflancer Technology
+        position: React Native Developer
+        start_date: 2024-01
+        end_date: 2024-07
+        location: Lalitpur, Nepal
+        summary:
+        highlights:
+          - Successfully developed and launched cross-platform mobile applications leveraging React Native, ensuring compatibility and optimal performance across iOS and Android platforms.
+          - Collaborated with designers and other developers to ensure thoughtful and consistent user experiences across Inflancer’s Android and iOS mobile app.
+      - company: Ayata Incorporation
+        position: Frontend Developer
+        start_date: 2023-01
+        end_date: 2023-12
+        location: Kathmandu, Nepal
+        summary:
+        highlights:
+          - Designed, developed, and maintained admin dashboards and CMS primarily using React, Tailwind, TypeScript, Chart.js, TanStack Table and React Query.
+          - Played a pivotal role in the development of a dynamic membership management system with integrated event registrations and membership functionalities.
+          - Built and shipped mobile responsive Next.js websites collaborating with designers and other developers.
+    projects:
+      - name: "[Form Builder](https://easyformbuilder.netlify.app/)"
+        start_date: 2023-09
+        end_date: 2023-11
+        summary: A Full Stack MERN app for building dynamic forms with drag and drop interface & to track and view the responses received in the created form.
+        highlights:
+          - MERN Stack, TypeScript, Tailwind CSS
+          - "[GitHub](https://github.com/iamrohanshrestha/form-builder)"
+      - name: "[Task Planner](https://tasksplanner.vercel.app/)"
+        start_date: 2022-12
+        end_date: 2023-01
+        summary: A task planner app with Kanban Board, Calendar View, CRUD functionality, search, sorting and ordering, dark and light mode, lottie animations, authentication using NextAuth and database using Prisma, PlanetScale(hosting) and MySQL.
+        highlights:
+          - Next.js, Prisma, TypeScript, Tailwind CSS
+          - "[GitHub](https://github.com/iamrohanshrestha/task-planner)"
     skills:
-      - label: Programming
-        details: Proficient with Python, C++, and Git; good understanding of Web, app development, and DevOps
-      - label: Mathematics
-        details: Good understanding of differential equations, calculus, and linear algebra
-      - label: Languages
-        details: 'English (fluent, TOEFL: 118/120), Turkish (native)'
-    publications:
-      - title: 3D Finite Element Analysis of No-Insulation Coils
-        authors:
-          - Frodo Baggins
-          - '***John Doe***'
-          - Samwise Gamgee
-        doi: 10.1109/TASC.2023.3340648
-        url:
-        journal:
-        date: 2004-01
-    extracurricular_activities:
-      - bullet: 'There are 7 unique entry types in RenderCV: *BulletEntry*, *TextEntry*, *EducationEntry*, *ExperienceEntry*, *NormalEntry*, *PublicationEntry*, and *OneLineEntry*.'
-      - bullet: Each entry type has a different structure and layout. This document demonstrates all of them.
-    numbered_entries:
-      - number: This is a numbered entry.
-      - number: This is another numbered entry.
-      - number: This is the third numbered entry.
-    reversed_numbered_entries:
-      - reversed_number: This is a reversed numbered entry.
-      - reversed_number: This is another reversed numbered entry.
-      - reversed_number: This is the third reversed numbered entry.
+      - label: Programming Languages
+        details: JavaScript, TypeScript, Python, SQL
+      - label: Libraries & Frameworks
+        details: Next.js, React, Astro, Expo, React Native, Nest.js, Express.js, Tailwind, Redux
+      - label: Tools & Platforms
+        details: Git, Github, Figma, Firebase
 design:
-  theme: engineeringresumes
+  theme: classic
   page:
     size: us-letter
-    top_margin: 2cm
-    bottom_margin: 2cm
-    left_margin: 2cm
-    right_margin: 2cm
+    top_margin: 1cm
+    bottom_margin: 1cm
+    left_margin: 1cm
+    right_margin: 1cm
     show_page_numbering: false
-    show_last_updated_date: true
+    show_last_updated_date: false
   colors:
     text: rgb(0, 0, 0)
-    name: rgb(0, 0, 0)
-    connections: rgb(0, 0, 0)
-    section_titles: rgb(0, 0, 0)
-    links: rgb(0, 0, 0)
+    name: rgb(0, 79, 144)
+    connections: rgb(0, 79, 144)
+    section_titles: rgb(0, 79, 144)
+    links: rgb(0, 79, 144)
     last_updated_date_and_page_numbering: rgb(128, 128, 128)
   text:
     font_family: XCharter
@@ -134,35 +92,34 @@ design:
     alignment: justified
     date_and_location_column_alignment: right
   links:
-    underline: true
-    use_external_link_icon: false
+    underline: false
+    use_external_link_icon: true
   header:
     name_font_family: XCharter
-    name_font_size: 25pt
-    name_bold: false
+    name_font_size: 30pt
+    name_bold: true
     photo_width: 3.5cm
     vertical_space_between_name_and_connections: 0.7cm
     vertical_space_between_connections_and_first_section: 0.7cm
-    horizontal_space_between_connections: 0.5cm
+    horizontal_space_between_connections: 0.46cm
     connections_font_family: XCharter
-    separator_between_connections: '|'
-    use_icons_for_connections: false
+    separator_between_connections: "|"
+    use_icons_for_connections: true
     alignment: center
   section_titles:
     type: with-parial-line
     font_family: XCharter
-    font_size: 1.2em
+    font_size: 1.4em
     bold: true
     small_caps: false
     line_thickness: 0.5pt
-    vertical_space_above: 0.55cm
+    vertical_space_above: 0.5cm
     vertical_space_below: 0.3cm
-    line_type: with-full-line
   entries:
     date_and_location_width: 4.15cm
-    left_and_right_margin: 0cm
+    left_and_right_margin: 0.2cm
     horizontal_space_between_columns: 0.1cm
-    vertical_space_between_entries: 0.4cm
+    vertical_space_between_entries: 1.2em
     allow_page_break_in_sections: true
     allow_page_break_in_entries: true
     short_second_row: false
@@ -170,35 +127,37 @@ design:
   highlights:
     bullet: •
     top_margin: 0.25cm
-    left_margin: 0cm
-    vertical_space_between_highlights: 0.19cm
-    horizontal_space_between_bullet_and_highlight: 0.3em
+    left_margin: 0.4cm
+    vertical_space_between_highlights: 0.25cm
+    horizontal_space_between_bullet_and_highlight: 0.5em
     summary_left_margin: 0cm
   entry_types:
     one_line_entry:
-      template: '**LABEL:** DETAILS'
+      template: "**LABEL:** DETAILS"
     education_entry:
-      main_column_first_row_template: '**INSTITUTION**, DEGREE in AREA -- LOCATION'
-      degree_column_template:
+      main_column_first_row_template: "**INSTITUTION**, AREA"
+      degree_column_template: "**DEGREE**"
       degree_column_width: 1cm
       main_column_second_row_template: |-
         SUMMARY
         HIGHLIGHTS
-      date_and_location_column_template: DATE
+      date_and_location_column_template: |-
+        LOCATION
+        DATE
     normal_entry:
-      main_column_first_row_template: '**NAME** -- **LOCATION**'
+      main_column_first_row_template: "**NAME** -- **LOCATION**"
       main_column_second_row_template: |-
         SUMMARY
         HIGHLIGHTS
       date_and_location_column_template: DATE
     experience_entry:
-      main_column_first_row_template: '**POSITION**, COMPANY -- LOCATION'
+      main_column_first_row_template: "**POSITION**, COMPANY -- LOCATION"
       main_column_second_row_template: |-
         SUMMARY
         HIGHLIGHTS
       date_and_location_column_template: DATE
     publication_entry:
-      main_column_first_row_template: '**TITLE**'
+      main_column_first_row_template: "**TITLE**"
       main_column_second_row_template: |-
         AUTHORS
         URL (JOURNAL)
@@ -219,7 +178,7 @@ locale:
   months: months
   year: year
   years: years
-  present: present
+  present: Present
   to: –
   abbreviations_for_months:
     - Jan
@@ -248,6 +207,6 @@ locale:
     - November
     - December
 rendercv_settings:
-  date: '2025-03-31'
+  date: "2025-04-01"
   render_command:
   bold_keywords: []
