--- a/Rohan_Shrestha_CV.yaml
+++ b/Rohan_Shrestha_CV.yaml
@@ -26,7 +26,7 @@ cv:
         position: Frontend Developer
         start_date: 2024-07
         end_date: present
-        location: Kathmandu, Nepal
+        location: Lalitpur, Nepal
         summary:
         highlights:
           - Led end-to-end development of **[TravelNepal+](https://travelnepalplus.com/)**, a centralized travel booking platform, featuring flight, bus, cable car, hotel and vehicle rental bookings, along with rich information about travel and trekking destinations.
